fix npm package.json

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "vite-plugin-vue-setup-name",
   "version": "0.1.0",
   "description": "Make the vue script setup syntax support the name attribute and fix source-map bug for debug",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p . --skipLibCheck"
   },
+  "files": [
+    "dist/"
+  ],
   "keywords": [
     "vite",
     "vite plugin",
